...
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:autoLink="web"
            android:gravity="center"
            android:nextFocusUp="@id/tvAuthenticationLink"
            android:nextFocusDown="@id/tiPrivateCode"
            android:text="@string/add_private_token_message"
            app:layout_constraintBottom_toTopOf="@id/tfPrivateCode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cbToken" />

...
            android:hint="@string/private_token"
            android:importantForAutofill="no"
            android:minWidth="200dp"
            android:nextFocusLeft="@id/tvAuthenticationLink"
            android:nextFocusRight="@id/bPastePrivateCode"
            android:nextFocusUp="@id/tvUsePrivateToken"
            android:nextFocusDown="@id/bInsertPrivate"
            app:endIconMode="clear_text"
            app:layout_constraintBottom_toTopOf="@id/bInsertPrivate"
            app:layout_constraintEnd_toStartOf="@id/bPastePrivateCode"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@+id/tvUsePrivateToken"
            app:layout_constraintTop_toBottomOf="@id/tvUsePrivateToken"
...
