<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_lists"
    app:startDestination="@id/list_tabs_dest">

    <fragment
        android:id="@+id/download_details_dest"
        android:name="com.github.livingwithhippos.unchained.downloaddetails.view.DownloadDetailsFragment"
        android:label="@string/details"
...
