...
            android:textAppearance="?attr/textAppearanceTitleLarge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/cvPremium"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvMail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:ellipsize="end"
            android:focusable="false"
            android:maxLines="1"
...
